--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/fhaidy/PassowrdGenerator#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jwt-simple": "^0.5.6",
+    "mongoose": "^5.10.11",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   }
 }
