--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.10.11",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   }
